# image_generator

./: .gitignore  CMakeLists.txt  README.md  package.xml
data/: table.urdf
launch/: empty.launch  image_generator.launch  kinect.launch
resources/: sample_urdf.urdf
resources/cameras/kinect/: kinect.dae  kinect.urdf.xacro
resources/obj_files/bowl/3152c7a0e8ee4356314eed4e88b74a21/models/: model_normalized.json  model_normalized.solid.binvox  model_normalized.surface.binvox
resources/obj_files/bowl/5e2c558555092b706e30831c34845769/models/: model_normalized.json  model_normalized.mtl  model_normalized.solid.binvox  model_normalized.surface.binvox
resources/obj_files/bowl/782aa72e7f14975b39d764edb37837d3/models/: model_normalized.json  model_normalized.surface.binvox
resources/obj_files/bowl/960c5c5bff2d3a4bbced73c51e99f8b2/models/: model_normalized.json  model_normalized.solid.binvox  model_normalized.surface.binvox
resources/obj_files/bowl/a0ac0c76dbb4b7685430c0f7a585e679/models/: model_normalized.json  model_normalized.solid.binvox  model_normalized.surface.binvox
resources/urdf_files/: table0.urdf  table1.urdf
scripts/: camera.py  category.py  convert_obj_to_urdf.py  generator.py  image_generator.py  image_saver.py  image_saver_node.py  image_saver_server.py  item.py  move_object.py  node.py  occlusion.py  playground.py  service.py  sort_picture.py  spawn.py  spawn_all.py  spawn_all_urdfs.py  test.py  utils.py
scripts/deprecated/: unused_category.py  unused_playground.py
scripts/sources/: camera.py  item.py  utils.py
scripts/tests/: occlusion.py  spawn_all.py  test.py
scripts/unused_scripts/: unused_convert_obj_to_urdf.py  unused_image_generator.py
srv/: ImageToSave.srv
world/: my_world.world
(+247 files in other folders)
